--- a/index.html
+++ b/index.html
@@ -2,5 +2,17 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+    <title>My Website</title>
+
+    <!-- Link CSS file -->
+    <link rel="stylesheet" href="style.css">
   </head>
+  <body>
+
+    <h1>Hello World</h1>
+    <button onclick="greet()">Click Me</button>
+
+    <!-- Link JS file -->
+    <script src="script.js"></script>
+</body>
 </html>
