--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-
     <h1>Hello World</h1>
     <button onclick="greet()">Click Me</button>
 
     <!-- Link JS file -->
     <script src="script.js"></script>
-</body>
+    <script type='text/javascript' src='https://convivareimagined--partialsb.sandbox.my.site.com/ESWConvivaMessagingChan1765182896774/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+  </body>
 </html>
