--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Hello World</h1>
-    <button onclick="greet()">Click Me</button>
+    <div class="convivaAIChatWindow">
+      <h1>Hello World</h1>
+      <button onclick="greet()">Click Me</button>
+    </div>
 
     <!-- Link JS file -->
     <script src="script.js"></script>
