--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   </head>
   <body>
     <div class="convivaAIChatWindow">
+      <div class="convivaAIChatHeader">
+        <div>
+          Conviva.AI(beta)
+          <button class="convivaAIChatHeaderMinimize"><i class="fa fa-window-minimize"></i></button>
+      </div>
       <h1>Hello World</h1>
       <button onclick="greet()">Click Me</button>
     </div>
