--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
 
     <!-- Link CSS file -->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <div class="convivaAIChatWindow">
       <div class="convivaAIChatHeader">
         <div>
-          Conviva.AI(beta)
+          <span>Conviva.AI(beta)</span>
           <button class="convivaAIChatHeaderMinimizeButton"><i class="fa fa-window-minimize"></i></button>
       </div>
     </div>
