--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
           <span>Conviva.AI(beta)</span>
           <button class="convivaAIChatHeaderMinimizeButton"><i class="fa fa-window-minimize"></i></button>
       </div>
+      <div class="convivaWelcomeBanner">
+        <p>Hello! I am Conviva.AI(beta), an AI assistant designed to help you find the best solutions for your business needs.</p>
+        <br/>
+        <p>How can I help you today?</p>
+      </div>
     </div>
 
     <!-- Link JS file -->
