--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div>
           <span>Conviva.AI(beta)</span>
           <button class="convivaAIChatHeaderMinimizeButton"><i class="fa fa-window-minimize"></i></button>
+        </div>
       </div>
       <div class="convivaWelcomeBanner">
         <p>Hello! I am Conviva.AI(beta), an AI assistant designed to help you find the best solutions for your business needs.</p>
