--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
         <p>How can I help you today?</p>
       </div>
     </div>
+    <div>
+      <button type="button" class="convivaButton" onclick="alert('Hello world!')">Talk to sales</button>
+      <button type="button" class="convivaButton" onclick="alert('Hello world!')">Show me a Conviva demo</button>
+      <button type="button" class="convivaButton" onclick="alert('Hello world!')">How can Conviva help my business</button>
+      <button type="button" class="convivaButton" onclick="alert('Hello world!')">I need technical support</button>
+    </div>
+    <div>
+      <textarea placeholder="Start a new chat..." aria-description="Press enter to send" aria-disabled="false"></textarea>
+    </div>
 
     <!-- Link JS file -->
     <script src="script.js"></script>
