--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <br/>
         <p>How can I help you today?</p>
       </div>
-      <div>
+      <div class="convivaButtonInputContainer">
         <div class="convivaButtonContainer">
           <button type="button" class="convivaButton" onclick="alert('Hello world!')">Talk to sales</button>
           <button type="button" class="convivaButton" onclick="alert('Hello world!')">Show me a Conviva demo</button>
