--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         </div>
         <div class="convivaButtonInputContainer">
           <div class="convivaButtonContainer">
-            <button type="button" class="convivaButton" onclick="alert('Hello world!')">Talk to sales</button>
-            <button type="button" class="convivaButton" onclick="alert('Hello world!')">Show me a Conviva demo</button>
-            <button type="button" class="convivaButton" onclick="alert('Hello world!')">How can Conviva help my business</button>
-            <button type="button" class="convivaButton" onclick="alert('Hello world!')">I need technical support</button>
+            <button type="button" class="convivaButton" onclick="onTalkToSales()">Talk to sales</button>
+            <button type="button" class="convivaButton" onclick="onShowMeAConvivaDemo()">Show me a Conviva demo</button>
+            <button type="button" class="convivaButton" onclick="onHowCanConvivaHelpMyBusiness()">How can Conviva help my business</button>
+            <button type="button" class="convivaButton" onclick="onINeedTechnicalSupport()">I need technical support</button>
           </div>
           <div class="convivaSearchInput">
             <input type="text" class="convivaSearch" placeholder="Start a new chat..." aria-description="Press enter to send" aria-disabled="false" id="searchInput" name="searchInput">
