--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <button type="button" class="convivaButton" onclick="onINeedTechnicalSupport()">I need technical support</button>
           </div>
           <div class="convivaSearchInput">
-            <input type="text" class="convivaSearch" placeholder="Start a new chat..." aria-description="Press enter to send" aria-disabled="false" id="searchInput" name="searchInput">
+            <input type="text" id="convivaChatInput" class="convivaSearch" placeholder="Start a new chat..." aria-description="Press enter to send" aria-disabled="false" id="searchInput" name="searchInput">
           </div>
         </div>
       </div>
