--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
       </div>
       <div class="quickChatContainer" data-id="quickChatContainer">
         <div class="convivaWelcomeBanner">
-          <p>Hello! I am Conviva.AI(beta), an AI assistant designed to help you find the best solutions for your
-            business needs.</p>
+          <p>"Hi! I'm Conviva's AI assistant. I can answer questions about our
+Outcome Performance Analytics platform - including our Digital Product Insights, Video
+Streaming Insights, and Agentic Performance Insights. I know everything in our technical
+documentation and can help you understand how Conviva helps companies [key value props].
+What brings you here today?"</p>
 
-          <p class="helpMessage">How can I help you today?</p>
+          <p class="helpMessage">What brings you here today?</p>
         </div>
         <div class="convivaButtonInputContainer">
           <div class="convivaButtonContainer">
