--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <p>"Hi! I'm Conviva's AI assistant. I can answer questions about our
 Outcome Performance Analytics platform - including our Digital Product Insights, Video
 Streaming Insights, and Agentic Performance Insights. I know everything in our technical
-documentation and can help you understand how Conviva helps companies [key value props].
+documentation and can help you understand how Conviva helps companies.
 What brings you here today?"</p>
 
           <p class="helpMessage">What brings you here today?</p>
