--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <div class="convivaAIChatWindow">
       <div class="convivaAIChatHeader">
         <div>
-          <span>Conviva.AI(beta)</span>
+          <span>Ask Conviva</span>
           <button class="convivaAIChatHeaderMinimizeButton" onclick="doMinimizeConvivaAIChatWindow()"><i
               class="fa fa-window-minimize"></i></button>
         </div>
       </div>
       <div class="quickChatContainer" data-id="quickChatContainer">
         <div class="convivaWelcomeBanner">
-          <p>"Hello! I am Conviva.ai, an AI assistant designed to help you find the best solutions for your business needs."</p>
+          <p>"I am an AI agent available to help answer your questions about Conviva and find the best solutions to your business needs."</p>
 
           <p class="helpMessage">How can I help you today?</p>
         </div>
