--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div>
           <span>Ask Conviva</span>
           <button class="convivaAIChatHeaderMinimizeButton" onclick="doMinimizeConvivaAIChatWindow()"><i
-              class="fa fa-window-minimize"></i></button>
+              class="fa fa-chevron-down"></i></button>
         </div>
       </div>
       <div class="quickChatContainer" data-id="quickChatContainer">
